added another test case
Reproduced issue on NServiceBus.NHibernate 4.3.0 - even if you make no
changes to the saga data in the transaction, you cannot close the saga
if child rows are present.

--- a/NServiceBusRepro/Messages/Messages.csproj
+++ b/NServiceBusRepro/Messages/Messages.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CloseSagaCommand.cs" />
     <Compile Include="IThirdEvent.cs" />
     <Compile Include="IFirstEvent.cs" />
     <Compile Include="ISecondEvent.cs" />
