--- a/PowershellCmdlets/packages/repositories.config
+++ b/PowershellCmdlets/packages/repositories.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\CmdletFour\packages.config" />
   <repository path="..\CmdletOne\packages.config" />
+  <repository path="..\CmdletThree\packages.config" />
   <repository path="..\CmdletTwo\packages.config" />
+  <repository path="..\TestConsole\packages.config" />
 </repositories>
