Got to a stable point where app domains actually work.  Will clean up shortly

--- a/PowershellCmdlets/packages/repositories.config
+++ b/PowershellCmdlets/packages/repositories.config
@@ -5,4 +5,6 @@
   <repository path="..\CmdletThree\packages.config" />
   <repository path="..\CmdletTwo\packages.config" />
   <repository path="..\TestConsole\packages.config" />
+  <repository path="..\TestModule\packages.config" />
+  <repository path="..\TestModule2\packages.config" />
 </repositories>
