--- a/PowershellCmdlets/TestConsole/TestConsole.csproj
+++ b/PowershellCmdlets/TestConsole/TestConsole.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>TestConsole</RootNamespace>
     <AssemblyName>TestConsole</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
@@ -36,31 +37,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Habitat.Core">
-      <HintPath>..\packages\Habitat.Core.1.0.1\lib\net40\Habitat.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management.Automation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\System.Management.Automation.6.1.7601.17515\lib\net40\System.Management.Automation.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="SystemInterface">
-      <HintPath>..\packages\SystemWrapper-sn.0.5.3\lib\net40\SystemInterface.dll</HintPath>
-    </Reference>
-    <Reference Include="SystemWrapper">
-      <HintPath>..\packages\SystemWrapper-sn.0.5.3\lib\net40\SystemWrapper.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Proxy2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Proxy.cs" />
-    <Compile Include="Proxy2.cs" />
+    <Compile Include="Proxy1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -69,6 +62,14 @@
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{76F7734F-DFB1-4AAB-B572-3860C0DA4428}</Project>
       <Name>Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TestModule2\TestModule2.csproj">
+      <Project>{39547A68-442C-4C4E-8034-4BCACAF22AFB}</Project>
+      <Name>TestModule2</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TestModule\TestModule.csproj">
+      <Project>{5C9D39D5-FF59-47F9-874D-BF6909770B39}</Project>
+      <Name>TestModule</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
