--- a/PowershellCmdlets/TestConsole/packages.config
+++ b/PowershellCmdlets/TestConsole/packages.config
@@ -1,6 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Habitat.Core" version="1.0.1" targetFramework="net40-Client" />
-  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net40-Client" />
-  <package id="SystemWrapper-sn" version="0.5.3" targetFramework="net40-Client" />
+  <package id="System.Management.Automation" version="6.1.7601.17515" targetFramework="net40" />
 </packages>
