--- a/PowershellCmdlets/CmdletFour/CmdletFour.csproj
+++ b/PowershellCmdlets/CmdletFour/CmdletFour.csproj
@@ -58,6 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxy.cs" />
     <Compile Include="ShowPath4Cmdlet.cs" />
