--- a/PowershellCmdlets/CmdletThree/CmdletThree.csproj
+++ b/PowershellCmdlets/CmdletThree/CmdletThree.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyLocator.cs" />
+    <Compile Include="IProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxy.cs" />
     <Compile Include="ShowPathCmdlet3.cs" />
